# 1984

./: .gitignore  1984.1  1984.conf.example  1984.spec  ALBIREO.md  CYBOARD.md  DEVELOPMENT.md  Development.md  INSTALL.md  M4.md  Makefile  Makefile.am  Makefile.in  NET4CPC.md  README.md  USAGE.md  aclocal.m4  configure  configure.ac  configure~  io.github.salvogendut.Emulator1984.desktop  io.github.salvogendut.Emulator1984.metainfo.xml  io.github.salvogendut.Emulator1984.yml
.github/workflows/: build.yml
debug/issue-122-albireo-mouse/: NOTES.md  trace.sh
debug/issue-129-ncfg-freeze/: CRASH-PINPOINTED.md  CYCLE-DIFF-FINDINGS.md  EARLY-INIT-RACE.md  FOLLOWUP-FINDINGS.md  KONCEPCJA-SURVIVES.md  MORNING-REPORT.md  PER-FRAME-CPU-EVOLUTION.md  README.md  SWEEP-RESULTS.md  TYPING-TIMING-SENSITIVE.md  boot_only_check.py  compare_traces.py  investigation-notes.md  probe.py  screen-frame3260.ppm  sna-frame3265-prereset.sna  test-nonet.conf
dist-win32/roms/: AmstradDiagLower.rom
dist-win64/roms/: M4ROM.ROM
docs/: FLATPAK.md  FUZIX_BUILD.md  LEDS.md  PILOT.md  SYMBOLS.md  SYMBOLS_SCOPE.md  USIFAC.md  issue-62-fuzix-notes.md
icons/: 1984.rc
packaging/: 1984-web.service.in
screenshots/: README.md
scripts/: gen_webgui_page.sh
src/: amx.c  amx.h  ch376.c  ch376.h  compat_win.h  config.c  config.h  cpc.c  cpc.h  crtc.c  crtc.h  disk.c  disk.h  display.c  display.h  fat.c  fat.h  fdc.c  fdc.h  gate_array.c  gate_array.h  gifcap.c  gifcap.h  host_mount.c  host_mount.h  ide.c  ide.h  joy.c  joy.h  kbd.c  kbd.h  kbd_pty.c  kbd_pty.h  leds.c  leds.h  m4.c  m4.h  main.c  mem.c  mem.h  (+53 more)
tests/: Makefile  test_crtc.c  test_disk.c  test_gate_array.c  test_gifcap.c  test_mem.c  test_psg.c  test_z80.c
